--- a/site/sitemap.xml.slim
+++ b/site/sitemap.xml.slim
@@ -3,5 +3,5 @@ urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9"
   - nodes_for_sitemap.each do |node|
     url
       loc = config['site_url'] + node.url
-      - if node.date
-        lastmod = node.date.iso8601
+      - if node.data.date
+        lastmod = node.data.date.iso8601
