--- a/site/index.html.slim
+++ b/site/index.html.slim
@@ -1,7 +1,7 @@
 p
-  strong> Is this thing on?
+  strong> Beginner's Mind:
   = config['site_description']
 
-h2 Random musings, i.e. an actual old-fashioned blog:
+h2 Random musings:
 
 = render '/posts/_list', locals: { posts: blog_posts }
