--- a/site/_layout.slim
+++ b/site/_layout.slim
@@ -4,15 +4,30 @@ html
     meta[ charset="utf-8" ]
     title = raw page_title
 
-    link[ rel="alternate" type="application/rss+xml" title="Carlo Zottmann" href="#{ config['site_url'] }/rss.xml" ]
+    link[ rel="alternate" type="application/rss+xml" title="Carlo Zottmann RSS Feed" href="#{ config['site_url'] }/rss.xml" ]
+
     link[ rel="pingback" href="https://webmention.io/czm.io/xmlrpc" ]
     link[ rel="webmention" href="https://webmention.io/czm.io/webmention" ]
+
     link[ rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/default.min.css" ]
     link[ rel="stylesheet" href="/css/jquery-oembed.css" ]
     link[ rel="stylesheet" href="/css/styles.css" ]
+
     script[ src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" ]
     script[ src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js" ]
     script[ src="/js/bundle.js" ]
+
+    meta[ property="og:site_name" content=config["site_title"] ]
+    meta[ property="og:type" content="website" ]
+    meta[ property="og:title" content=config["site_title"] ]
+    meta[ property="og:description" content=config["site_description"] ]
+    meta[ property="og:url" content=config['site_url'] ]
+
+    meta[ name="twitter:card" content="summary" ]
+    meta[ name="twitter:title" content=config["site_title"] ]
+    meta[ name="twitter:description" content=config["site_description"] ]
+    meta[ name="twitter:url" content=config['site_url'] ]
+    meta[ name="twitter:site" content="@municode" ]
 
   body
     .container
