--- a/site/css/styles.css.scss
+++ b/site/css/styles.css.scss
@@ -1,20 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i');
 @import "partials/_forms.scss";
 
 $col1: steelblue;
 $col2: peru;
-$col3: rgb(138, 138, 138);
+$col3: #888;
 $col-link: #666;
 
-$font: 18px/1.6 "Noto Serif","Helvetica Neue",Arial,sans-serif;
 
 * { box-sizing: inherit; }
 html, body { box-sizing: border-box; }
 
 body {
-  font: $font;
   background-color: white;
   color: #555;
+  font: 18px/1.5 "Noto Serif", serif;
 }
 
 .container {
@@ -38,13 +38,16 @@ main {
 footer[role="main"] {
   color: lightgrey;
   font-size: 0.825em;
-  a { color: inherit; }
-
   margin-top: 50px;
+
+  a {
+    color: inherit;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-size: inherit;
+  line-height: 1.3;
   margin: 2em 0 1em 0;
 }
 
@@ -75,6 +78,19 @@ hr {
   color: #ddd;
   margin: 2rem auto;
   width: 15%;
+}
+
+figure {
+  margin: 1em 0;
+
+  figcaption {
+    font: 16px/1.5 "Noto Sans", sans-serif;
+    color: $col3;
+  }
+
+  img {
+    max-width: 100%;
+  }
 }
 
 a.footnote {
