[NEW] Adds privacy page  [CHG] Changes description

--- a/site/_layout.slim
+++ b/site/_layout.slim
@@ -46,7 +46,7 @@ html
         '  ·
         a[ href="https://github.com/carlo" rel="me" ] GitHub
         '  ·
-        a[ href="/imprint.html" ] Imprint / Impressum
+        a[ href="/imprint.html" ] Impressum & Datenschutzerklärung
 
       main[ role="main" ]
         = yield
