[NEW] Adds link to privacy page

--- a/site/_layout.slim
+++ b/site/_layout.slim
@@ -46,7 +46,9 @@ html
         '  ·
         a[ href="https://github.com/carlo" rel="me" ] GitHub
         '  ·
-        a[ href="/imprint.html" ] Impressum & Datenschutzerklärung
+        a[ href="/imprint.html" ] Impressum
+        '  ·
+        a[ href="/privacy.html" ] Datenschutzerklärung
 
       main[ role="main" ]
         = yield
